Добавленна бизнес-логика проекта и визуальная часть

--- a/NoteApp/NoteApp/NoteApp.csproj
+++ b/NoteApp/NoteApp/NoteApp.csproj
@@ -43,9 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CategoriesNotes.cs" />
     <Compile Include="MainNote.cs" />
+    <Compile Include="NoteCategory.cs" />
     <Compile Include="Note.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
